--- a/css/styles.css
+++ b/css/styles.css
@@ -37,15 +37,19 @@ input{
     padding: 10px;
 }
 
-#input-ingresar, #consultar, #deposito, #retiro{
+#input-ingresar, #deposito, #retiro{
     cursor: pointer;
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
 }
 
-#input-ingresar:hover, #consultar:hover, #deposito:hover, #retiro:hover{
+#input-ingresar:hover, #deposito:hover, #retiro:hover{
     border: 1px solid white;
     background-color: brown;
     color: white;
+}
+
+.cuenta{
+    padding-top: 5%;
 }
